--- a/assets/pages/Plastic_doc.html
+++ b/assets/pages/Plastic_doc.html
@@ -9,10 +9,10 @@
       href="/assets/image/green_leaves_round_logo.png"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href="assets/bootstrap/dist/css/bootstrap.css" />
-    <link rel="stylesheet" href="assets/css/style.css" />
-    <link rel="stylesheet" href="assets/css/theme.css" />
-    <link rel="stylesheet" href="assets/chhorng/style.css" />
+    <link rel="stylesheet" href="../bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/theme.css" />
+    
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
@@ -349,7 +349,7 @@
             <!-- Image -->
             <div class="col-lg-4 text-center">
               <img
-                src="assets/minea/img/image01.png"
+                src="../image/minea/image01.png"
                 alt="ឥដ្ឋអេកូ"
                 class="img-fluid rounded-3 shadow-sm"
               />
@@ -374,7 +374,7 @@
                       class="card h-100 border-0 shadow-sm hover-shadow transition rounded-3"
                     >
                       <img
-                        src="assets/minea/img/image02.png"
+                        src="../image/minea/image02.png"
                         alt="ការកែច្នៃផ្លាស្ទិក"
                         class="card-img-top rounded-top-3"
                         style="height: 300px"
@@ -400,7 +400,7 @@
                       class="card h-100 border-0 shadow-sm hover-shadow transition rounded-3"
                     >
                       <img
-                        src="assets/minea/img/image04.png"
+                        src="../image/minea/image04.png"
                         alt="ការកែច្នៃផ្លាស្ទិក"
                         class="card-img-top rounded-top-3"
                         style="height: 300px"
@@ -426,7 +426,7 @@
                       class="card h-100 border-0 shadow-sm hover-shadow transition rounded-3"
                     >
                       <img
-                        src="assets/minea/img/maxresdefault.jpg"
+                        src="../image/minea/maxresdefault.jpg"
                         alt="ការកែច្នៃផ្លាស្ទិក"
                         class="card-img-top rounded-top-3"
                         style="height: 300px"
@@ -451,7 +451,7 @@
                       class="card h-100 border-0 shadow-sm hover-shadow transition rounded-3"
                     >
                       <img
-                        src="assets/minea/img/bb_02.png"
+                        src="../image/minea/bb_02.png"
                         alt="ការកែច្នៃផ្លាស្ទិក"
                         class="card-img-top rounded-top-3"
                         style="height: 300px"
@@ -477,7 +477,7 @@
                       class="card h-100 border-0 shadow-sm hover-shadow transition rounded-3"
                     >
                       <img
-                        src="assets/minea/img/coffee-img.png"
+                        src="../image/minea/coffee-img.png"
                         alt="ការកែច្នៃផ្លាស្ទិក"
                         class="card-img-top rounded-top-3"
                         style="height: 300px"
