--- a/assets/pages/Plastic_doc01.html
+++ b/assets/pages/Plastic_doc01.html
@@ -9,10 +9,10 @@
       href="/assets/image/green_leaves_round_logo.png"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href="assets/bootstrap/dist/css/bootstrap.css" />
-    <link rel="stylesheet" href="assets/css/style.css" />
-    <link rel="stylesheet" href="assets/css/theme.css" />
-    <link rel="stylesheet" href="assets/chhorng/style.css" />
+    <link rel="stylesheet" href="../bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/theme.css" />
+    
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
@@ -355,12 +355,12 @@
             <!-- Image -->
             <div class="col-lg-4 text-center">
               <img
-                src="assets/minea/img/image03.png"
+                src="../image/minea/image03.png"
                 alt="សិល្បៈពីសំរាមប្លាស្ទិក"
                 class="img-fluid rounded-3 shadow-sm"
               />
               <img
-                src="assets/minea/img/image05.png"
+                src="../image/minea/image05.png"
                 alt="សិល្បៈពីសំរាមប្លាស្ទិក"
                 class="img-fluid rounded-3 shadow-sm"
                 style="margin-top: 30px"
@@ -386,7 +386,7 @@
                       class="card h-100 border-0 shadow-sm hover-shadow transition rounded-3"
                     >
                       <img
-                        src="assets/minea/img/image02.png"
+                        src="../image/minea/image02.png"
                         alt="ការកែច្នៃផ្លាស្ទិក"
                         class="card-img-top rounded-top-3"
                         style="height: 300px"
@@ -412,7 +412,7 @@
                       class="card h-100 border-0 shadow-sm hover-shadow transition rounded-3"
                     >
                       <img
-                        src="assets/minea/img/image04.png"
+                        src="../image/minea/image04.png"
                         alt="ការកែច្នៃផ្លាស្ទិក"
                         class="card-img-top rounded-top-3"
                         style="height: 300px"
@@ -438,7 +438,7 @@
                       class="card h-100 border-0 shadow-sm hover-shadow transition rounded-3"
                     >
                       <img
-                        src="assets/minea/img/maxresdefault.jpg"
+                        src="../image/minea/maxresdefault.jpg"
                         alt="ការកែច្នៃផ្លាស្ទិក"
                         class="card-img-top rounded-top-3"
                         style="height: 300px"
@@ -463,7 +463,7 @@
                       class="card h-100 border-0 shadow-sm hover-shadow transition rounded-3"
                     >
                       <img
-                        src="assets/minea/img/bb_02.png"
+                        src="../image/minea/bb_02.png"
                         alt="ការកែច្នៃផ្លាស្ទិក"
                         class="card-img-top rounded-top-3"
                         style="height: 300px"
@@ -489,7 +489,7 @@
                       class="card h-100 border-0 shadow-sm hover-shadow transition rounded-3"
                     >
                       <img
-                        src="assets/minea/img/coffee-img.png"
+                        src="../image/minea/coffee-img.png"
                         alt="ការកែច្នៃផ្លាស្ទិក"
                         class="card-img-top rounded-top-3"
                         style="height: 300px"
