--- a/assets/pages/about.html
+++ b/assets/pages/about.html
@@ -6,15 +6,15 @@
     <title>អំពីយើង</title>
     <link
       rel="icon"
-      href="/assets/image/green_leaves_round_logo.png"
+      href="../image/green_leaves_round_logo.png"
       type="image/x-icon"
     />
     <!-- css -->
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <!-- Suo LyLay -->
-    <link rel="stylesheet" href="assets/css/theme.css" />
+    <link rel="stylesheet" href="../css/theme.css" />
     <!-- bootstrap 5 -->
-    <link rel="stylesheet" href="assets/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="../bootstrap/dist/css/bootstrap.css" />
     <!-- fontawesome -->
     <link
       rel="stylesheet"
@@ -35,7 +35,7 @@
           <!-- Logo -->
           <a class="navbar-brand" href="index.html">
             <img
-              src="assets/image/green_leaves_round_logo.png"
+              src="../image/green_leaves_round_logo.png"
               class="logo"
               style="width: 40px"
               alt="logo"
@@ -53,7 +53,7 @@
               <h5 class="offcanvas-title" id="offcanvasNavbarLabel">
                 <a class="navbar-brand d-block" href="index.html">
                   <img
-                    src="assets/image/green_leaves_round_logo.png"
+                    src="../image/green_leaves_round_logo.png"
                     style="width: 60px"
                     alt="logo"
                   />
@@ -182,7 +182,7 @@
                   <a class="dropdown-item" href="#">
                     <div class="py-2 d-flex align-items-center">
                       <img
-                        src="assets/image/avatar-4.jpg"
+                        src="../image/avatar-4.jpg"
                         class="rounded-circle"
                         style="width: 40px; height: 40px"
                       />
@@ -202,7 +202,7 @@
                     <a class="dropdown-item" href="#">
                       <div class="py-2 d-flex align-items-center">
                         <img
-                          src="assets/image/avatar-5.jpg"
+                          src="../image/avatar-5.jpg"
                           class="rounded-circle"
                           style="width: 40px; height: 40px"
                         />
@@ -237,7 +237,7 @@
             <!-- Profile Dropdown -->
             <div class="dropdown">
               <img
-                src="assets/image/avatar-4.jpg"
+                src="../image/avatar-4.jpg"
                 alt="Profile"
                 class="avatar dropdown-toggle rounded-circle ms-2"
                 style="width: 40px; height: 40px"
@@ -251,7 +251,7 @@
                     class="dropdown-item d-flex align-items-center py-2"
                   >
                     <img
-                      src="assets/image/avatar-4.jpg"
+                      src="../image/avatar-4.jpg"
                       alt="Avatar"
                       class="rounded-circle mx-2"
                       style="width: 35px; height: 35px"
@@ -303,7 +303,7 @@
             <div class="col-lg-12">
               <div class="card mb-4" data-aos="fade-up">
                 <!-- 
-              <img src="assets/chhorng/img/group-photo.jpg" class="object-fit-cover" style="height: 400px; display: block;
+              <img src="../image/chhorng/group-photo.jpg" class="object-fit-cover" style="height: 400px; display: block;
       margin-left: auto;
       margin-right: auto;
       width: 50%;" alt=""> -->
@@ -319,7 +319,7 @@
                   <div class="col-sm-6 col-md-4" data-aos="fade-up">
                     <div class="card card-member">
                       <img
-                        src="assets/chhorng/img/nazaby-ai.jpg"
+                        src="../image/chhorng/nazaby-ai.jpg"
                         class="card-img object-fit-cover"
                         style="height: 245px"
                         alt=""
@@ -338,7 +338,7 @@
                                 class="nav-link"
                                 href="https://web.facebook.com/nazaby.zin/"
                                 ><img
-                                  src="assets/chhorng/img/fb.webp"
+                                  src="../image/chhorng/fb.webp"
                                   class="img-icon"
                                   alt=""
                               /></a>
@@ -346,7 +346,7 @@
                             <li>
                               <a class="nav-link" href="https://t.me/zaby21"
                                 ><img
-                                  src="assets/chhorng/img/telegram-black.png"
+                                  src="../image/chhorng/telegram-black.png"
                                   class="img-icon"
                                   alt=""
                               /></a>
@@ -356,7 +356,7 @@
                                 class="nav-link"
                                 href="https://www.linkedin.com/in/measrithy-nazaby-005948314/"
                                 ><img
-                                  src="assets/chhorng/img/linkin.png"
+                                  src="../image/chhorng/linkin.png"
                                   class="img-icon"
                                   alt=""
                               /></a>
@@ -371,7 +371,7 @@
                   <div class="col-sm-6 col-md-4" data-aos="zoom-in">
                     <div class="card card-member">
                       <img
-                        src="assets/chhorng/img/Kropun-ai.jpg"
+                        src="../image/chhorng/Kropun-ai.jpg"
                         class="card-img object-fit-cover"
                         style="height: 245px"
                         alt=""
@@ -388,7 +388,7 @@
                                 class="nav-link"
                                 href="https://www.facebook.com/profile.php?id=61576696425543"
                                 ><img
-                                  src="assets/chhorng/img/fb.webp"
+                                  src="../image/chhorng/fb.webp"
                                   class="img-icon"
                                   alt=""
                               /></a>
@@ -396,7 +396,7 @@
                             <li>
                               <a class="nav-link" href="https://t.me/DDDemmii"
                                 ><img
-                                  src="assets/chhorng/img/telegram-black.png"
+                                  src="../image/chhorng/telegram-black.png"
                                   class="img-icon"
                                   alt=""
                               /></a>
@@ -406,7 +406,7 @@
                                 class="nav-link"
                                 href="https://www.linkedin.com/in/nhoem-senkropum-b0081a261"
                                 ><img
-                                  src="assets/chhorng/img/linkin.png"
+                                  src="../image/chhorng/linkin.png"
                                   class="img-icon"
                                   alt=""
                               /></a>
@@ -421,7 +421,7 @@
                   <div class="col-sm-6 col-md-4" data-aos="zoom-in">
                     <div class="card card-member">
                       <img
-                        src="assets/chhorng/img/chhorng-ai2.jpg"
+                        src="../image/chhorng/chhorng-ai2.jpg"
                         class="card-img object-fit-cover"
                         style="height: 245px"
                         alt=""
@@ -438,7 +438,7 @@
                                 class="nav-link"
                                 href="https://www.facebook.com/share/16s8Skgwjb/?mibextid=wwXIfr"
                                 ><img
-                                  src="assets/chhorng/img/fb.webp"
+                                  src="../image/chhorng/fb.webp"
                                   class="img-icon"
                                   alt=""
                               /></a>
@@ -446,7 +446,7 @@
                             <li>
                               <a class="nav-link" href="https://t.me/destroholy"
                                 ><img
-                                  src="assets/chhorng/img/telegram-black.png"
+                                  src="../image/chhorng/telegram-black.png"
                                   class="img-icon"
                                   alt=""
                               /></a>
@@ -456,7 +456,7 @@
                                 class="nav-link"
                                 href="https://www.linkedin.com/in/kim-chhorng-mao-461040370/?trk=public-profile-join-page"
                                 ><img
-                                  src="assets/chhorng/img/linkin.png"
+                                  src="../image/chhorng/linkin.png"
                                   class="img-icon"
                                   alt=""
                               /></a>
@@ -471,7 +471,7 @@
                   <div class="col-sm-6 col-md-4" data-aos="zoom-in">
                     <div class="card card-member">
                       <img
-                        src="assets/chhorng/img/Minea-ai.jpg"
+                        src="../image/chhorng/Minea-ai.jpg"
                         class="card-img object-fit-cover"
                         style="height: 245px"
                         alt=""
@@ -488,7 +488,7 @@
                                 class="nav-link"
                                 href="https://www.facebook.com/share/19kmz5vuSL/"
                                 ><img
-                                  src="assets/chhorng/img/fb.webp"
+                                  src="../image/chhorng/fb.webp"
                                   class="img-icon"
                                   alt=""
                               /></a>
@@ -496,7 +496,7 @@
                             <li>
                               <a class="nav-link" href="https://t.me/JOHNNEA12"
                                 ><img
-                                  src="assets/chhorng/img/telegram-black.png"
+                                  src="../image/chhorng/telegram-black.png"
                                   class="img-icon"
                                   alt=""
                               /></a>
@@ -506,7 +506,7 @@
                                 class="nav-link"
                                 href="https://www.linkedin.com/in/meng-minea-60b2ab375/"
                                 ><img
-                                  src="assets/chhorng/img/linkin.png"
+                                  src="../image/chhorng/linkin.png"
                                   class="img-icon"
                                   alt=""
                               /></a>
@@ -521,7 +521,7 @@
                   <div class="col-sm-6 col-md-4" data-aos="zoom-in">
                     <div class="card card-member">
                       <img
-                        src="assets/chhorng/img/Makara-ai.jpg"
+                        src="../image/chhorng/Makara-ai.jpg"
                         class="card-img object-fit-cover"
                         style="height: 245px"
                         alt=""
@@ -538,7 +538,7 @@
                                 class="nav-link"
                                 href="https://www.facebook.com/share/1ChhS81hnP/?mibextid=wwXIfr"
                                 ><img
-                                  src="assets/chhorng/img/fb.webp"
+                                  src="../image/chhorng/fb.webp"
                                   class="img-icon"
                                   alt=""
                               /></a>
@@ -548,7 +548,7 @@
                                 class="nav-link"
                                 href="https://t.me/chummakara168"
                                 ><img
-                                  src="assets/chhorng/img/telegram-black.png"
+                                  src="../image/chhorng/telegram-black.png"
                                   class="img-icon"
                                   alt=""
                               /></a>
@@ -558,7 +558,7 @@
                                 class="nav-link"
                                 href="https://www.linkedin.com/in/chum-makara-8b0718382/"
                                 ><img
-                                  src="assets/chhorng/img/linkin.png"
+                                  src="../image/chhorng/linkin.png"
                                   class="img-icon"
                                   alt=""
                               /></a>
@@ -573,7 +573,7 @@
                   <div class="col-sm-6 col-md-4" data-aos="zoom-in">
                     <div class="card card-member">
                       <img
-                        src="assets/chhorng/img/vuthy-ai.jpg"
+                        src="../image/chhorng/vuthy-ai.jpg"
                         class="card-img object-fit-cover"
                         style="height: 245px"
                         alt=""
@@ -592,7 +592,7 @@
                                 class="nav-link"
                                 href="https://www.facebook.com/chhorn.vuthy.146?mibextid=ZbWKwL"
                                 ><img
-                                  src="assets/chhorng/img/fb.webp"
+                                  src="../image/chhorng/fb.webp"
                                   class="img-icon"
                                   alt=""
                               /></a>
@@ -600,7 +600,7 @@
                             <li>
                               <a class="nav-link" href=""
                                 ><img
-                                  src="assets/chhorng/img/telegram-black.png"
+                                  src="../image/chhorng/telegram-black.png"
                                   class="img-icon"
                                   alt=""
                               /></a>
@@ -608,7 +608,7 @@
                             <li>
                               <a class="nav-link" href=""
                                 ><img
-                                  src="assets/chhorng/img/linkin.png"
+                                  src="../image/chhorng/linkin.png"
                                   class="img-icon"
                                   alt=""
                               /></a>
@@ -709,7 +709,7 @@
               class="footer-img mb-3 d-flex align-items-center"
             >
               <img
-                src="assets/image/green_leaves_round_logo.png"
+                src="../image/green_leaves_round_logo.png"
                 alt="logo"
                 style="width: 50px"
               />
@@ -804,9 +804,9 @@
       </div>
     </footer>
     <!-- scripts -->
-    <script src="assets/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="assets/js/function.js"></script>
+    <script src="../js/function.js"></script>
     <script>
       AOS.init();
     </script>
