--- a/assets/pages/be_eco.html
+++ b/assets/pages/be_eco.html
@@ -9,8 +9,8 @@
       href="/assets/image/green_leaves_round_logo.png"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href="assets/css/style.css" />
-    <link rel="stylesheet" href="assets/css/theme.css" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/theme.css" />
 
     <!-- Bootstrap CSS -->
     <link
@@ -301,7 +301,7 @@
         <div class="text-center py-10">
           <h1 class="fw-bold">Be Eco Sustainable Shop</h1>
           <img
-            src="assets/Kropum/img/beco____-.jpg"
+            src="../image/Kropum/beco____-.jpg"
             alt="Be Eco"
             class="img-fluid rounded mt-3"
             style="max-width: 50%"
@@ -425,7 +425,7 @@
               <div class="accordion-body">
                 <div class="col-md-4">
                   <div class="card p-3">
-                    <img src="assets/Kropum/img/beco____-.jpg" alt="" />
+                    <img src="../image/Kropum/beco____-.jpg" alt="" />
                     <h5 class="mt-2">Be Eco Sustainable Shop</h5>
                     <p>Street 464, TTP</p>
                     <p>Wed-Fri 12-6, Weekend 10-6</p>
