--- a/assets/pages/clothline.html
+++ b/assets/pages/clothline.html
@@ -9,8 +9,8 @@
       href="/assets/image/green_leaves_round_logo.png"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href="assets/css/style.css" />
-    <link rel="stylesheet" href="assets/css/theme.css" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/theme.css" />
 
     <!-- Bootstrap CSS -->
     <link
@@ -340,7 +340,7 @@
         <div class="text-center mb-5">
           <h1 class="fw-bold">ស្នួខោអាវ Clothesline Resale Boutique</h1>
           <img
-            src="assets/Kropum/img/snurkhorav.jpg"
+            src="../image/Kropum/snurkhorav.jpg"
             alt="Clothesline"
             class="img-fluid rounded mt-3"
             style="max-width: 50%"
@@ -547,7 +547,7 @@
               <div class="accordion-body">
                 <div class="col-md-4">
                   <div class="card p-3">
-                    <img src="assets/Kropum/img/clothlinetk.jpg" alt="" />
+                    <img src="../image/Kropum/clothlinetk.jpg" alt="" />
                     <h5 class="mt-2">TK Community Shop</h5>
                     <p>Tuol Kork</p>
                     <p>Wed-Fri 12-6, Weekend 10-6</p>
@@ -582,7 +582,7 @@
               <div class="accordion-body">
                 <div class="col-md-4">
                   <div class="card p-3">
-                    <img src="assets/Kropum/img/clothlinettp.jpg" alt="" />
+                    <img src="../image/Kropum/clothlinettp.jpg" alt="" />
                     <h5 class="mt-2">Clothesline TTP</h5>
                     <p>Street 440</p>
                     <p>Tue-Sun 10-6</p>
