--- a/assets/pages/donate.html
+++ b/assets/pages/donate.html
@@ -8,9 +8,9 @@
       href="/assets/image/green_leaves_round_logo.png"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href="assets/bootstrap/dist/css/bootstrap.css" />
-    <link rel="stylesheet" href="assets/css/theme.css" />
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="../bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="../css/theme.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="assets/Kropum/donate.css" />
     <link
       rel="stylesheet"
@@ -394,7 +394,7 @@
             <div class="col-sm-12 col-md-6 col-lg-4">
               <div class="card">
                 <img
-                  src="assets/Kropum/img/snurkhorav.jpg"
+                  src="../image/Kropum/snurkhorav.jpg"
                   alt="Ocean Turtle"
                   class="card-img"
                 />
@@ -421,7 +421,7 @@
             <div class="col-sm-12 col-md-6 col-lg-4">
               <div class="card">
                 <img
-                  src="assets/Kropum/img/p1.jpg"
+                  src="../image/Kropum/p1.jpg"
                   alt="White Tiger"
                   class="card-img"
                 />
@@ -449,7 +449,7 @@
             <div class="col-sm-12 col-md-6 col-lg-4">
               <div class="card">
                 <img
-                  src="assets/Kropum/img/beco____-.jpg"
+                  src="../image/Kropum/beco____-.jpg"
                   alt="Present for You"
                   class="card-img"
                 />
@@ -477,7 +477,7 @@
             <div class="col-sm-12 col-md-6 col-lg-4">
               <div class="card">
                 <img
-                  src="assets/Kropum/img/jasnaktmeyknhom.jpg"
+                  src="../image/Kropum/jasnaktmeyknhom.jpg"
                   alt="Ocean Turtle"
                   class="card-img"
                 />
@@ -503,7 +503,7 @@
             <div class="col-sm-12 col-md-6 col-lg-4">
               <div class="card">
                 <img
-                  src="assets/Kropum/img/thecircle.jpg"
+                  src="../image/Kropum/thecircle.jpg"
                   alt="Ocean Turtle"
                   class="card-img"
                 />
@@ -529,7 +529,7 @@
             <div class="col-sm-12 col-md-6 col-lg-4">
               <div class="card">
                 <img
-                  src="assets/Kropum/img/donate11.jpg"
+                  src="../image/Kropum/donate11.jpg"
                   alt="Ocean Turtle"
                   class="card-img"
                 />
@@ -555,7 +555,7 @@
             <div class="col-sm-12 col-md-6 col-lg-4">
               <div class="card">
                 <img
-                  src="assets/Kropum/img/trashisnice1.jpg"
+                  src="../image/Kropum/trashisnice1.jpg"
                   alt="Ocean Turtle"
                   class="card-img"
                 />
@@ -581,7 +581,7 @@
             <div class="col-sm-12 col-md-6 col-lg-4">
               <div class="card">
                 <img
-                  src="assets/Kropum/img/ch.png"
+                  src="../image/Kropum/ch.png"
                   alt="Ocean Turtle"
                   class="card-img"
                 />
@@ -607,7 +607,7 @@
             <div class="col-sm-12 col-md-6 col-lg-4">
               <div class="card">
                 <img
-                  src="assets/Kropum/img/hh.jpg"
+                  src="../image/Kropum/hh.jpg"
                   alt="Ocean Turtle"
                   class="card-img"
                 />
