--- a/assets/pages/donation.html
+++ b/assets/pages/donation.html
@@ -10,8 +10,8 @@
       type="image/x-icon"
     />
 
-    <link rel="stylesheet" href="assets/css/style.css" />
-    <link rel="stylesheet" href="assets/css/theme.css" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/theme.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
@@ -430,7 +430,7 @@
           <div class="col-sm-12 col-md-6 col-lg-4">
             <div class="card">
               <img
-                src="assets/Kropum/img/p1.jpg"
+                src="../image/Kropum/p1.jpg"
                 class="card-img"
                 alt="Pizza 4P’s"
                 style="height: 250px; object-fit: cover"
@@ -453,7 +453,7 @@
           <div class="col-sm-12 col-md-6 col-lg-4">
             <div class="card">
               <img
-                src="assets/Kropum/img/beco____-.jpg"
+                src="../image/Kropum/beco____-.jpg"
                 class="card-img"
                 alt="Be Eco"
                 style="height: 250px; object-fit: cover"
@@ -528,10 +528,10 @@
         <div class="container my-5">
           <h3 class="mt-4">ដៃគូរដែលទទួលបរិច្ចាគ</h3>
           <div class="d-flex partners flex-wrap mt-3">
-            <img src="assets/Kropum/img/p4p.jpg" alt="Pizza 4P’s" />
-            <img src="assets/Kropum/img/greencam.jpg" alt="GoGreen Cambodia" />
-            <img src="assets/Kropum/img/theclothes.jpg" alt="The Clothes" />
-            <img src="assets/Kropum/img/trashisnice.jpg" alt="Trash is Nice" />
+            <img src="../image/Kropum/p4p.jpg" alt="Pizza 4P’s" />
+            <img src="../image/Kropum/greencam.jpg" alt="GoGreen Cambodia" />
+            <img src="../image/Kropum/theclothes.jpg" alt="The Clothes" />
+            <img src="../image/Kropum/trashisnice.jpg" alt="Trash is Nice" />
           </div>
         </div>
       </section>
