--- a/assets/pages/e-commerce.html
+++ b/assets/pages/e-commerce.html
@@ -9,10 +9,10 @@
       href="/assets/image/green_leaves_round_logo.png"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href="assets/bootstrap/dist/css/bootstrap.css" />
-    <link rel="stylesheet" href="assets/makara/style.css" />
-    <link rel="stylesheet" href="assets/css/style.css" />
-    <link rel="stylesheet" href="assets/css/theme.css" />
+    <link rel="stylesheet" href="../bootstrap/dist/css/bootstrap.css" />
+    
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/theme.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
@@ -23,7 +23,7 @@
     />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <!-- css -->
-    <link rel="stylesheet" href="assets/chhorng/style.css" />
+    
   </head>
   <body>
     <header>
@@ -342,7 +342,7 @@
             <div class="col-sm-12 col-md-6 col-lg-4">
               <div class="card shadow border-0 rounded-3 product-card">
                 <img
-                  src="assets/makara/image/image01.png"
+                  src="../image/makara/image01.png"
                   class="card-img-top"
                   alt="Product"
                   style="height: 350px"
@@ -398,7 +398,7 @@
             <div class="col-sm-12 col-md-6 col-lg-4">
               <div class="card shadow border-0 rounded-3 product-card">
                 <img
-                  src="assets/makara/image/image04.png"
+                  src="../image/makara/image04.png"
                   class="card-img-top"
                   alt="Product"
                   style="height: 350px"
@@ -454,7 +454,7 @@
             <div class="col-sm-12 col-md-6 col-lg-4">
               <div class="card shadow border-0 rounded-3 product-card">
                 <img
-                  src="assets/makara/image/image05.png"
+                  src="../image/makara/image05.png"
                   class="card-img-top"
                   alt="Product"
                   style="height: 350px"
@@ -510,7 +510,7 @@
             <div class="col-sm-12 col-md-6 col-lg-4">
               <div class="card shadow border-0 rounded-3 product-card">
                 <img
-                  src="assets/makara/image/image06.png"
+                  src="../image/makara/image06.png"
                   class="card-img-top"
                   alt="Product"
                   style="height: 350px"
@@ -566,7 +566,7 @@
             <div class="col-sm-12 col-md-6 col-lg-4">
               <div class="card shadow border-0 rounded-3 product-card">
                 <img
-                  src="assets/makara/image/image07.png"
+                  src="../image/makara/image07.png"
                   class="card-img-top"
                   alt="Product"
                   style="height: 350px"
@@ -636,7 +636,7 @@
             <div class="col-sm-12 col-md-6 col-lg-4">
               <div class="card shadow border-0 rounded-3 product-card">
                 <img
-                  src="assets/makara/image/image08.jpg"
+                  src="../image/makara/image08.jpg"
                   class="card-img-top"
                   alt="Product"
                   style="height: 350px"
@@ -692,7 +692,7 @@
             <div class="col-sm-12 col-md-6 col-lg-4">
               <div class="card shadow border-0 rounded-3 product-card">
                 <img
-                  src="assets/makara/image/image10.jpg"
+                  src="../image/makara/image10.jpg"
                   class="card-img-top"
                   alt="Product"
                   style="height: 350px"
@@ -748,7 +748,7 @@
             <div class="col-sm-12 col-md-6 col-lg-4">
               <div class="card shadow border-0 rounded-3 product-card">
                 <img
-                  src="assets/makara/image/image11.jpg"
+                  src="../image/makara/image11.jpg"
                   class="card-img-top"
                   alt="Product"
                   style="height: 350px"
@@ -803,7 +803,7 @@
             <div class="col-sm-12 col-md-6 col-lg-4">
               <div class="card shadow border-0 rounded-3 product-card">
                 <img
-                  src="assets/makara/image/image13.png"
+                  src="../image/makara/image13.png"
                   class="card-img-top"
                   alt="Product"
                   style="height: 350px"
@@ -858,7 +858,7 @@
             <div class="col-sm-12 col-md-6 col-lg-4">
               <div class="card shadow border-0 rounded-3 product-card">
                 <img
-                  src="assets/makara/image/image14.png"
+                  src="../image/makara/image14.png"
                   class="card-img-top"
                   alt="Product"
                   style="height: 350px"
