--- a/assets/pages/frist_doc.html
+++ b/assets/pages/frist_doc.html
@@ -9,9 +9,9 @@
       href="/assets/image/green_leaves_round_logo.png"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href="assets/bootstrap/dist/css/bootstrap.css" />
-    <link rel="stylesheet" href="assets/css/style.css" />
-    <link rel="stylesheet" href="assets/css/theme.css" />
+    <link rel="stylesheet" href="../bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/theme.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
@@ -314,7 +314,7 @@
                   class="card h-100 border-0 shadow-sm hover-shadow transition rounded-3"
                 >
                   <img
-                    src="assets/minea/img/image02.png"
+                    src="../image/minea/image02.png"
                     alt="ការកែច្នៃផ្លាស្ទិក"
                     class="card-img-top rounded-top-3"
                     style="height: 300px"
@@ -337,7 +337,7 @@
                   class="card h-100 border-0 shadow-sm hover-shadow transition rounded-3"
                 >
                   <img
-                    src="assets/minea/img/image04.png"
+                    src="../image/minea/image04.png"
                     alt="ការកែច្នៃផ្លាស្ទិក"
                     class="card-img-top rounded-top-3"
                     style="height: 300px"
@@ -357,7 +357,7 @@
                   class="card h-100 border-0 shadow-sm hover-shadow transition rounded-3"
                 >
                   <img
-                    src="assets/minea/img/maxresdefault.jpg"
+                    src="../image/minea/maxresdefault.jpg"
                     alt="ការកែច្នៃផ្លាស្ទិក"
                     class="card-img-top rounded-top-3"
                     style="height: 300px"
@@ -374,7 +374,7 @@
                   class="card h-100 border-0 shadow-sm hover-shadow transition rounded-3"
                 >
                   <img
-                    src="assets/minea/img/feature.png"
+                    src="../image/minea/feature.png"
                     alt="ការកែច្នៃផ្លាស្ទិក"
                     class="card-img-top rounded-top-3"
                     style="height: 300px"
@@ -397,7 +397,7 @@
                   class="card h-100 border-0 shadow-sm hover-shadow transition rounded-3"
                 >
                   <img
-                    src="assets/minea/img/bb_02.png"
+                    src="../image/minea/bb_02.png"
                     alt="ការកែច្នៃផ្លាស្ទិក"
                     class="card-img-top rounded-top-3"
                     style="height: 300px"
@@ -420,7 +420,7 @@
                   class="card h-100 border-0 shadow-sm hover-shadow transition rounded-3"
                 >
                   <img
-                    src="assets/minea/img/img01.png"
+                    src="../image/minea/img01.png"
                     alt="ការកែច្នៃផ្លាស្ទិក"
                     class="card-img-top rounded-top-3"
                     style="height: 300px"
