--- a/assets/pages/payment.html
+++ b/assets/pages/payment.html
@@ -17,8 +17,8 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
-    <link rel="stylesheet" href="assets/css/style.css" />
-    <link rel="stylesheet" href="assets/css/theme.css" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/theme.css" />
   </head>
 
   <body class="bg-payment">
@@ -110,7 +110,7 @@
                             data-bs-target="#qrModalaba"
                           >
                             <img
-                              src="assets/makara/image/aba02.png"
+                              src="../image/makara/aba02.png"
                               alt="ABA Bank"
                             />
                             <p>ABA Pay</p>
@@ -125,7 +125,7 @@
                             data-bs-target="#qrModalac"
                           >
                             <img
-                              src="assets/makara/image/ac02.png"
+                              src="../image/makara/ac02.png"
                               alt="ACLEDA Bank"
                               style="height: 30px; width: auto"
                             />
@@ -168,7 +168,7 @@
                 </div>
                 <div class="modal-body text-center py-4">
                   <img
-                    src="assets/makara/image/qrcode.jpg"
+                    src="../image/makara/qrcode.jpg"
                     alt="ABA QR Code"
                     class="img-fluid rounded"
                     style="max-width: 280px"
@@ -211,7 +211,7 @@
                 </div>
                 <div class="modal-body text-center py-4">
                   <img
-                    src="assets/makara/image/qrcode.jpg"
+                    src="../image/makara/qrcode.jpg"
                     alt="ACLEDA QR Code"
                     class="img-fluid rounded"
                     style="max-width: 280px"
