--- a/assets/pages/pizza4ps.html
+++ b/assets/pages/pizza4ps.html
@@ -10,8 +10,8 @@
       type="image/x-icon"
     />
     <!--css-->
-    <link rel="stylesheet" href="assets/css/theme.css" />
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="../css/theme.css" />
+    <link rel="stylesheet" href="../css/style.css" />
 
     <!-- Bootstrap CSS -->
     <link
@@ -310,7 +310,7 @@
           <div class="text-center mb-5">
             <h1 class="fw-bold">Pizza 4P's</h1>
             <img
-              src="assets/Kropum/img/p1.jpg"
+              src="../image/Kropum/p1.jpg"
               alt="Pizza 4P's"
               class="img-fluid rounded mt-3"
               style="max-width: 50%"
@@ -433,7 +433,7 @@
                 <div class="accordion-body">
                   <div class="col-md-4">
                     <div class="card p-3">
-                      <img src="assets/Kropum/img/p1.jpg" alt="" />
+                      <img src="../image/Kropum/p1.jpg" alt="" />
                       <h5 class="mt-2">Pizza 4P's</h5>
                       <p>Street 464, TTP</p>
                       <p>Wed-Fri 12-6, Weekend 10-6</p>
