--- a/assets/pages/signin.html
+++ b/assets/pages/signin.html
@@ -6,7 +6,7 @@
     <title>Sign-In</title>
     <link
       rel="icon"
-      href="/../image/green_leaves_round_logo.png"
+      href="../image/green_leaves_round_logo.png"
       type="image/x-icon"
     />
     <!-- Bootstrap 5 CSS -->
@@ -33,7 +33,7 @@
           <div class="row justify-content-center align-items-center min-vh-100">
             <div class="col-10 col-md-10 position-relative">
               <img
-                src="../chhorng/img/trashbin.png"
+                src="../image/chhorng/trashbin.png"
                 class="position-absolute"
                 alt=""
                 style="
@@ -45,7 +45,7 @@
                 "
               />
               <img
-                src="../chhorng/img/image.png"
+                src="../image/chhorng/image.png"
                 class="position-absolute object-fit-contain"
                 alt=""
                 style="
@@ -57,7 +57,7 @@
                 "
               />
               <img
-                src="../chhorng/img/trash-recycle-sign.png"
+                src="../image/chhorng/trash-recycle-sign.png"
                 class="position-absolute"
                 alt=""
                 style="
@@ -69,7 +69,7 @@
                 "
               />
               <img
-                src="../chhorng/img/recy-icon.png"
+                src="../image/chhorng/recy-icon.png"
                 class="position-absolute"
                 alt=""
                 style="
@@ -151,7 +151,7 @@
                       </div>
                       <!-- Submit Button -->
                       <a
-                        href="index.html"
+                        href="../pages//home.html"
                         class="d-grid mb-3 w-75 m-auto text-decoration-none"
                       >
                         <button
@@ -198,19 +198,19 @@
                           href="https://appleid.apple.com/auth/authorize"
                           target="_blank"
                           ><img
-                            src="../chhorng/img/apple.png"
+                            src="../image/chhorng/apple.png"
                             alt=""
                             class="icon bg-success-subtle rounded-circle p-2"
                         /></a>
                         <a href="https://www.facebook.com/login" target="_blank"
                           ><img
-                            src="../chhorng/img/fb.png"
+                            src="../image/chhorng/fb.png"
                             alt=""
                             class="icon bg-success-subtle rounded-circle p-2"
                         /></a>
                         <a href="https://accounts.google.com/" target="_blank"
                           ><img
-                            src="../chhorng/img/Google.png"
+                            src="../image/chhorng/Google.png"
                             alt=""
                             class="icon bg-success-subtle rounded-circle p-2"
                         /></a>
@@ -289,19 +289,19 @@
                           href="https://appleid.apple.com/auth/authorize"
                           target="_blank"
                           ><img
-                            src="../chhorng/img/apple.png"
+                            src="../image/chhorng/apple.png"
                             alt=""
                             class="icon bg-success-subtle rounded-circle p-2"
                         /></a>
                         <a href="https://www.facebook.com/login" target="_blank"
                           ><img
-                            src="../chhorng/img/fb.png"
+                            src="../image/chhorng/fb.png"
                             alt=""
                             class="icon bg-success-subtle rounded-circle p-2"
                         /></a>
                         <a href="https://accounts.google.com/" target="_blank"
                           ><img
-                            src="../chhorng/img/Google.png"
+                            src="../image/chhorng/Google.png"
                             alt=""
                             class="icon bg-success-subtle rounded-circle p-2"
                         /></a>
@@ -312,7 +312,7 @@
                 <!-- Image Section -->
                 <div class="col-md-7 d-none d-md-block p-1 rounded-4">
                   <img
-                    src="../chhorng/img/recycle.jpg"
+                    src="../image/chhorng/recycle.jpg"
                     class="rounded-4 h-100 w-100 object-fit-cover"
                     alt="Sign-In Image"
                   />
