--- a/assets/pages/used.html
+++ b/assets/pages/used.html
@@ -15,8 +15,8 @@
       rel="stylesheet"
     />
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="assets/css/theme.css" />
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="../css/theme.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <!-- Font Awesome -->
     <link
       rel="stylesheet"
@@ -336,7 +336,7 @@
           class="hero-banner position-relative text-white d-flex align-items-center"
           style="
             min-height: 80vh;
-            background: url('assets/Kropum/img/pexels-subhrajyoti-paul-447200412-33926291.jpg')
+            background: url('../image/Kropum/pexels-subhrajyoti-paul-447200412-33926291.jpg')
               center/cover no-repeat;
           "
         >
@@ -419,7 +419,7 @@
                 <div class="col-md-4">
                   <div class="card">
                     <img
-                      src="assets/Kropum/img/clothes.jpg"
+                      src="../image/Kropum/clothes.jpg"
                       alt=""
                       class="card-img"
                     />
@@ -439,7 +439,7 @@
                 <div class="col-md-4">
                   <div class="card">
                     <img
-                      src="assets/Kropum/img/wooden table.jpg"
+                      src="../image/Kropum/wooden table.jpg"
                       alt=""
                       class="card-img"
                     />
@@ -459,7 +459,7 @@
                 <div class="col-md-4">
                   <div class="card">
                     <img
-                      src="assets/Kropum/img/pc1.jpg"
+                      src="../image/Kropum/pc1.jpg"
                       alt=""
                       class="card-img"
                     />
@@ -484,7 +484,7 @@
                 <div class="col-md-4">
                   <div class="card">
                     <img
-                      src="assets/Kropum/img/book.jpg"
+                      src="../image/Kropum/book.jpg"
                       alt=""
                       class="card-img"
                     />
@@ -504,7 +504,7 @@
                 <div class="col-md-4">
                   <div class="card">
                     <img
-                      src="assets/Kropum/img/shoes.jpg"
+                      src="../image/Kropum/shoes.jpg"
                       alt=""
                       class="card-img"
                     />
@@ -529,7 +529,7 @@
                 <div class="col-md-4">
                   <div class="card">
                     <img
-                      src="assets/Kropum/img/2-Seater Sofa.jpg"
+                      src="../image/Kropum/2-Seater Sofa.jpg"
                       alt=""
                       class="card-img"
                     />
@@ -551,7 +551,7 @@
                 <div class="col-md-4">
                   <div class="card">
                     <img
-                      src="assets/Kropum/img/bycicle.jpg"
+                      src="../image/Kropum/bycicle.jpg"
                       alt=""
                       class="card-img"
                     />
@@ -571,7 +571,7 @@
                 <div class="col-md-4">
                   <div class="card">
                     <img
-                      src="assets/Kropum/img/កំសៀវ.jpg"
+                      src="../image/Kropum/កំសៀវ.jpg"
                       alt=""
                       class="card-img"
                     />
@@ -591,7 +591,7 @@
                 <div class="col-md-4">
                   <div class="card">
                     <img
-                      src="assets/Kropum/img/bag1.jpg"
+                      src="../image/Kropum/bag1.jpg"
                       alt=""
                       class="card-img"
                     />
@@ -624,7 +624,7 @@
                 <div class="col-md-4">
                   <div class="card">
                     <img
-                      src="assets/Kropum/img/Schoolbag.jpg"
+                      src="../image/Kropum/Schoolbag.jpg"
                       alt=""
                       class="card-img"
                     />
@@ -647,7 +647,7 @@
                 <div class="col-md-4">
                   <div class="card">
                     <img
-                      src="assets/Kropum/img/homedecor.jpg"
+                      src="../image/Kropum/homedecor.jpg"
                       alt=""
                       class="card-img"
                     />
@@ -672,7 +672,7 @@
                 <div class="col-md-4">
                   <div class="card">
                     <img
-                      src="assets/Kropum/img/princessshoesjpg.jpg"
+                      src="../image/Kropum/princessshoesjpg.jpg"
                       alt=""
                       class="card-img"
                     />
@@ -695,7 +695,7 @@
                 <div class="col-md-4">
                   <div class="card">
                     <img
-                      src="assets/Kropum/img/blank1.jpg"
+                      src="../image/Kropum/blank1.jpg"
                       alt=""
                       class="card-img"
                     />
@@ -718,7 +718,7 @@
                 <div class="col-md-4">
                   <div class="card">
                     <img
-                      src="assets/Kropum/img/toy.jpg"
+                      src="../image/Kropum/toy.jpg"
                       alt=""
                       class="card-img"
                     />
@@ -741,7 +741,7 @@
                 <div class="col-md-4">
                   <div class="card">
                     <img
-                      src="assets/Kropum/img/lamp.jpg"
+                      src="../image/Kropum/lamp.jpg"
                       alt=""
                       class="card-img"
                     />
@@ -765,7 +765,7 @@
                 <div class="col-md-4">
                   <div class="card">
                     <img
-                      src="assets/Kropum/img/clothes.jpg"
+                      src="../image/Kropum/clothes.jpg"
                       alt=""
                       class="card-img"
                     />
@@ -785,7 +785,7 @@
                 <div class="col-md-4">
                   <div class="card">
                     <img
-                      src="assets/Kropum/img/wooden table.jpg"
+                      src="../image/Kropum/wooden table.jpg"
                       alt=""
                       class="card-img"
                     />
@@ -805,7 +805,7 @@
                 <div class="col-md-4">
                   <div class="card">
                     <img
-                      src="assets/Kropum/img/pc1.jpg"
+                      src="../image/Kropum/pc1.jpg"
                       alt=""
                       class="card-img"
                     />
@@ -830,7 +830,7 @@
                 <div class="col-md-4">
                   <div class="card">
                     <img
-                      src="assets/Kropum/img/book.jpg"
+                      src="../image/Kropum/book.jpg"
                       alt=""
                       class="card-img"
                     />
@@ -850,7 +850,7 @@
                 <div class="col-md-4">
                   <div class="card">
                     <img
-                      src="assets/Kropum/img/shoes.jpg"
+                      src="../image/Kropum/shoes.jpg"
                       alt=""
                       class="card-img"
                     />
@@ -875,7 +875,7 @@
                 <div class="col-md-4">
                   <div class="card">
                     <img
-                      src="assets/Kropum/img/2-Seater Sofa.jpg"
+                      src="../image/Kropum/2-Seater Sofa.jpg"
                       alt=""
                       class="card-img"
                     />
@@ -897,7 +897,7 @@
                 <div class="col-md-4">
                   <div class="card">
                     <img
-                      src="assets/Kropum/img/bycicle.jpg"
+                      src="../image/Kropum/bycicle.jpg"
                       alt=""
                       class="card-img"
                     />
@@ -917,7 +917,7 @@
                 <div class="col-md-4">
                   <div class="card">
                     <img
-                      src="assets/Kropum/img/កំសៀវ.jpg"
+                      src="../image/Kropum/កំសៀវ.jpg"
                       alt=""
                       class="card-img"
                     />
@@ -937,7 +937,7 @@
                 <div class="col-md-4">
                   <div class="card">
                     <img
-                      src="assets/Kropum/img/bag1.jpg"
+                      src="../image/Kropum/bag1.jpg"
                       alt=""
                       class="card-img"
                     />
