--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
       href="/assets/image/green_leaves_round_logo.png"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href="assets/bootstrap/dist/css/bootstrap.css" />
-    <link rel="stylesheet" href="assets/css/style.css" />
-    <link rel="stylesheet" href="assets/css/theme.css" />
+    <link rel="stylesheet" href="../bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/theme.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
@@ -27,7 +27,7 @@
         class="navbar bg-nav fixed-top navbar-expand-lg"
         style="height: 70px"
       >
-        <div class="container-fluid">
+        <div class="container">
           <a class="navbar-brand" href="index.html">
             <img
               src="assets/image/green_leaves_round_logo.png"
@@ -37,7 +37,7 @@
             />
           </a>
 
-          <div
+          <!-- <div
             class="offcanvas offcanvas-start"
             tabindex="-1"
             id="offcanvasNavbar"
@@ -132,7 +132,7 @@
                 </li>
               </ul>
             </div>
-          </div>
+          </div> -->
           <div class="user-login d-flex align-items-center">
             <button
               class="navbar-toggler fs-6 mt-1 landing-nav"
@@ -145,7 +145,7 @@
               <span class="navbar-toggler-icon"></span>
             </button>
             <a
-              href="project-folder/signin.html"
+              href="assets/pages/signin.html"
               class="btn btn-success mx-1 mt-1 landing-btn"
               >ចូលគណនី</a
             >
