--- a/assets/pages/cart.html
+++ b/assets/pages/cart.html
@@ -9,8 +9,8 @@
       href="/assets/image/green_leaves_round_logo.png"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href="assets/bootstrap/dist/css/bootstrap.css" />
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="../bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
