--- a/assets/pages/event.html
+++ b/assets/pages/event.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="assets/bootstrap/dist/css/bootstrap.css" />
-    <link rel="stylesheet" href="assets/css/theme.css" />
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="../bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="../css/theme.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <link
       rel="icon"
       href="/assets/image/green_leaves_round_logo.png"
@@ -341,7 +341,7 @@
             <div class="col-sm-12 col-md-6 col-lg-3 d-flex">
               <div class="card card-event h-100">
                 <img
-                  src="assets/Kropum/img/Event4.jpg"
+                  src="../image/Kropum/Event4.jpg"
                   class="card-img-top"
                   alt="event1"
                 />
@@ -368,7 +368,7 @@
             <div class="col-sm-12 col-md-6 col-lg-3 d-flex">
               <div class="card card-event h-100">
                 <img
-                  src="assets/Kropum/img/Event6.jpg"
+                  src="../image/Kropum/Event6.jpg"
                   class="card-img-top"
                   alt="event2"
                 />
@@ -396,7 +396,7 @@
             <div class="col-sm-12 col-md-6 col-lg-3 d-flex">
               <div class="card card-event h-100">
                 <img
-                  src="assets/Kropum/img/event7.jpg"
+                  src="../image/Kropum/event7.jpg"
                   class="card-img-top"
                   alt="event3"
                 />
@@ -424,7 +424,7 @@
             <div class="col-sm-12 col-md-6 col-lg-3 d-flex">
               <div class="card card-event h-100">
                 <img
-                  src="assets/Kropum/img/event1.jpg"
+                  src="../image/Kropum/event1.jpg"
                   class="card-img-top"
                   alt="event4"
                 />
@@ -452,7 +452,7 @@
             <div class="col-sm-12 col-md-6 col-lg-3 d-flex">
               <div class="card card-event h-100">
                 <img
-                  src="assets/Kropum/img/Event8.jpg"
+                  src="../image/Kropum/Event8.jpg"
                   class="card-img-top"
                   alt="event5"
                 />
@@ -480,7 +480,7 @@
             <div class="col-sm-12 col-md-6 col-lg-3 d-flex">
               <div class="card card-event h-100">
                 <img
-                  src="assets/Kropum/img/event9.jpg"
+                  src="../image/Kropum/event9.jpg"
                   class="card-img-top"
                   alt="event6"
                 />
@@ -508,7 +508,7 @@
             <div class="col-sm-12 col-md-6 col-lg-3 d-flex">
               <div class="card card-event h-100">
                 <img
-                  src="assets/Kropum/img/Event2.jpg"
+                  src="../image/Kropum/Event2.jpg"
                   class="card-img-top"
                   alt="event7"
                 />
@@ -536,7 +536,7 @@
             <div class="col-sm-12 col-md-6 col-lg-3 d-flex">
               <div class="card card-event h-100">
                 <img
-                  src="assets/Kropum/img/EVENT3.jpg"
+                  src="../image/Kropum/EVENT3.jpg"
                   class="card-img-top"
                   alt="event8"
                 />
