--- a/assets/pages/event3.html
+++ b/assets/pages/event3.html
@@ -10,9 +10,9 @@
       type="image/x-icon"
     />
     <!--CSS-->
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <!--CSS tc-->
-    <link rel="stylesheet" href="assets/css/theme.css" />
+    <link rel="stylesheet" href="../css/theme.css" />
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -309,7 +309,7 @@
         <div class="row align-items-center">
           <div class="col-md-12 col-lg-6 mb-3 d-flex justify-content-center">
             <img
-              src="assets/Kropum/img/event7.jpg"
+              src="../image/Kropum/event7.jpg"
               alt="Forest EcoPreneurs"
               class="hero-banner img-fluid banner-event"
               style="width: 90%"
@@ -391,7 +391,7 @@
               <div class="swiper-slide">
                 <div class="card">
                   <img
-                    src="assets/Kropum/img/event9.jpg"
+                    src="../image/Kropum/event9.jpg"
                     alt=""
                     class="card-img-top card-img"
                     style="width: 100%; height: 200px; object-fit: cover"
@@ -410,7 +410,7 @@
               <div class="swiper-slide">
                 <div class="card">
                   <img
-                    src="assets/Kropum/img/event6.jpg"
+                    src="../image/Kropum/event6.jpg"
                     alt=""
                     class="card-img-top"
                     style="width: 100%; height: 200px; object-fit: cover"
@@ -429,7 +429,7 @@
               <div class="swiper-slide">
                 <div class="card">
                   <img
-                    src="assets/Kropum/img/event7.jpg"
+                    src="../image/Kropum/event7.jpg"
                     alt=""
                     class="card-img-top"
                     style="width: 100%; height: 200px; object-fit: cover"
@@ -448,7 +448,7 @@
               <div class="swiper-slide">
                 <div class="card">
                   <img
-                    src="assets/Kropum/img/Event1.jpg"
+                    src="../image/Kropum/Event1.jpg"
                     alt=""
                     class="card-img-top"
                     style="width: 100%; height: 200px; object-fit: cover"
@@ -467,7 +467,7 @@
               <div class="swiper-slide">
                 <div class="card">
                   <img
-                    src="assets/Kropum/img/Event8.jpg"
+                    src="../image/Kropum/Event8.jpg"
                     alt=""
                     class="card-img-top"
                     style="width: 100%; height: 200px; object-fit: cover"
@@ -485,7 +485,7 @@
               <div class="swiper-slide">
                 <div class="card">
                   <img
-                    src="assets/Kropum/img/Event2.jpg"
+                    src="../image/Kropum/Event2.jpg"
                     alt=""
                     class="card-img-top"
                     style="width: 100%; height: 200px; object-fit: cover"
@@ -503,7 +503,7 @@
               <div class="swiper-slide">
                 <div class="card">
                   <img
-                    src="assets/Kropum/img/EVENT3.jpg"
+                    src="../image/Kropum/EVENT3.jpg"
                     alt=""
                     class="card-img-top"
                     style="width: 100%; height: 200px; object-fit: cover"
@@ -521,7 +521,7 @@
               <div class="swiper-slide">
                 <div class="card">
                   <img
-                    src="assets/Kropum/img/event4.jpg"
+                    src="../image/Kropum/event4.jpg"
                     alt=""
                     class="card-img-top"
                     style="width: 100%; height: 200px; object-fit: cover"
