--- a/assets/pages/event4.html
+++ b/assets/pages/event4.html
@@ -10,9 +10,9 @@
       type="image/x-icon"
     />
     <!--CSS-->
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <!--CSS tc-->
-    <link rel="stylesheet" href="assets/css/theme.css" />
+    <link rel="stylesheet" href="../css/theme.css" />
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -311,7 +311,7 @@
         <div class="row align-items-center">
           <div class="col-md-12 col-lg-6 mb-3 d-flex justify-content-center">
             <img
-              src="assets/Kropum/img/event1.jpg"
+              src="../image/Kropum/event1.jpg"
               alt="Forest EcoPreneurs"
               class="hero-banner img-fluid banner-event"
               style="width: 90%"
@@ -393,7 +393,7 @@
               <div class="swiper-slide">
                 <div class="card">
                   <img
-                    src="assets/Kropum/img/event9.jpg"
+                    src="../image/Kropum/event9.jpg"
                     alt=""
                     class="card-img-top card-img"
                     style="width: 100%; height: 200px; object-fit: cover"
@@ -412,7 +412,7 @@
               <div class="swiper-slide">
                 <div class="card">
                   <img
-                    src="assets/Kropum/img/event6.jpg"
+                    src="../image/Kropum/event6.jpg"
                     alt=""
                     class="card-img-top"
                     style="width: 100%; height: 200px; object-fit: cover"
@@ -431,7 +431,7 @@
               <div class="swiper-slide">
                 <div class="card">
                   <img
-                    src="assets/Kropum/img/event7.jpg"
+                    src="../image/Kropum/event7.jpg"
                     alt=""
                     class="card-img-top"
                     style="width: 100%; height: 200px; object-fit: cover"
@@ -450,7 +450,7 @@
               <div class="swiper-slide">
                 <div class="card">
                   <img
-                    src="assets/Kropum/img/Event1.jpg"
+                    src="../image/Kropum/Event1.jpg"
                     alt=""
                     class="card-img-top"
                     style="width: 100%; height: 200px; object-fit: cover"
@@ -469,7 +469,7 @@
               <div class="swiper-slide">
                 <div class="card">
                   <img
-                    src="assets/Kropum/img/Event8.jpg"
+                    src="../image/Kropum/Event8.jpg"
                     alt=""
                     class="card-img-top"
                     style="width: 100%; height: 200px; object-fit: cover"
@@ -487,7 +487,7 @@
               <div class="swiper-slide">
                 <div class="card">
                   <img
-                    src="assets/Kropum/img/Event2.jpg"
+                    src="../image/Kropum/Event2.jpg"
                     alt=""
                     class="card-img-top"
                     style="width: 100%; height: 200px; object-fit: cover"
@@ -505,7 +505,7 @@
               <div class="swiper-slide">
                 <div class="card">
                   <img
-                    src="assets/Kropum/img/EVENT3.jpg"
+                    src="../image/Kropum/EVENT3.jpg"
                     alt=""
                     class="card-img-top"
                     style="width: 100%; height: 200px; object-fit: cover"
@@ -523,7 +523,7 @@
               <div class="swiper-slide">
                 <div class="card">
                   <img
-                    src="assets/Kropum/img/event4.jpg"
+                    src="../image/Kropum/event4.jpg"
                     alt=""
                     class="card-img-top"
                     style="width: 100%; height: 200px; object-fit: cover"
