--- a/assets/pages/eventposting.html
+++ b/assets/pages/eventposting.html
@@ -15,8 +15,8 @@
       rel="stylesheet"
     />
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="assets/css/theme.css" />
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="../css/theme.css" />
+    <link rel="stylesheet" href="../css/style.css" />
 
     <!-- Font Awesome -->
     <link
