--- a/assets/pages/forgetpassword.html
+++ b/assets/pages/forgetpassword.html
@@ -10,10 +10,10 @@
       type="image/x-icon"
     />
     <!-- Bootstrap 5 CSS -->
-    <link rel="stylesheet" href="assets/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="../bootstrap/dist/css/bootstrap.css" />
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="assets/css/theme.css" />
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="../css/theme.css" />
+    <link rel="stylesheet" href="../css/style.css" />
   </head>
 
   <body class="forgetpwd-page">
