--- a/assets/pages/note-user.html
+++ b/assets/pages/note-user.html
@@ -29,8 +29,8 @@
     />
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="assets/css/dashboard.css" />
-    <link rel="stylesheet" href="assets/css/theme.css" />
+    <link rel="stylesheet" href="../css/dashboard.css" />
+    <link rel="stylesheet" href="../css/theme.css" />
     <title>ការកត់ត្រា</title>
     <link
       rel="stylesheet"
