--- a/assets/pages/register.html
+++ b/assets/pages/register.html
@@ -10,11 +10,11 @@
       type="image/x-icon"
     />
     <!-- css  -->
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <!-- Suo LyLay  -->
-    <link rel="stylesheet" href="assets/css/theme.css" />
+    <link rel="stylesheet" href="../css/theme.css" />
     <!-- bs5  -->
-    <link rel="stylesheet" href="assets/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="../bootstrap/dist/css/bootstrap.css" />
     <!-- js  -->
     <link rel="stylesheet" href="assets/chhorng/javascript.js" />
   </head>
