--- a/assets/pages/reuse.html
+++ b/assets/pages/reuse.html
@@ -15,9 +15,9 @@
       rel="stylesheet"
     />
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="assets/css/theme.css" />
+    <link rel="stylesheet" href="../css/theme.css" />
     <!--CSS-->
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <!-- Icon -->
     <link
       rel="stylesheet"
