--- a/assets/pages/user_profile.html
+++ b/assets/pages/user_profile.html
@@ -25,8 +25,8 @@
       crossorigin="anonymous"
     ></script>
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="assets/css/style.css" />
-    <link rel="stylesheet" href="assets/css/theme.css" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/theme.css" />
   </head>
   <body class="user-pf-body">
     <header>
