--- a/assets/pages/user_setting.html
+++ b/assets/pages/user_setting.html
@@ -29,9 +29,9 @@
     />
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="assets/css/dashboard.css" />
-    <link rel="stylesheet" href="assets/css/style.css" />
-    <link rel="stylesheet" href="assets/css/theme.css" />
+    <link rel="stylesheet" href="../css/dashboard.css" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/theme.css" />
 
     <title>ការកំណត់អ្នកប្រើប្រាស់</title>
   </head>
