--- a/assets/pages/video-doc.html
+++ b/assets/pages/video-doc.html
@@ -11,10 +11,10 @@
     />
     <!-- link css -->
     <link rel="stylesheet" href="assets/minea/css/minea.css" />
-    <link rel="stylesheet" href="assets/css/style.css" />
-    <link rel="stylesheet" href="assets/css/theme.css" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/theme.css" />
     <!-- link bs -->
-    <link rel="stylesheet" href="assets/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="../bootstrap/dist/css/bootstrap.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
@@ -300,7 +300,7 @@
                 <div class="card h-100">
                   <div class="card-img p-2">
                     <img
-                      src="assets/minea/img/coffee-img.png"
+                      src="../image/minea/coffee-img.png"
                       alt=""
                       class="rounded-3"
                     />
@@ -317,7 +317,7 @@
                 <div class="card h-100">
                   <div class="card-img p-2">
                     <img
-                      src="assets/minea/img/plastic.png"
+                      src="../image/minea/plastic.png"
                       alt=""
                       class="rounded-3"
                     />
@@ -333,7 +333,7 @@
                 <div class="card h-100">
                   <div class="card-img p-2">
                     <img
-                      src="assets/minea/img/ompov.png"
+                      src="../image/minea/ompov.png"
                       alt=""
                       class="rounded-3"
                     />
@@ -349,7 +349,7 @@
                 <div class="card h-100">
                   <div class="card-img p-2">
                     <img
-                      src="assets/minea/img/Kitchenwaste.png"
+                      src="../image/minea/Kitchenwaste.png"
                       alt=""
                       class="rounded-3"
                     />
@@ -365,7 +365,7 @@
                 <div class="card h-100">
                   <div class="card-img p-2">
                     <img
-                      src="assets/minea/img/sombokong.png"
+                      src="../image/minea/sombokong.png"
                       alt=""
                       class="rounded-3"
                     />
@@ -381,7 +381,7 @@
                 <div class="card h-100">
                   <div class="card-img p-2">
                     <img
-                      src="assets/minea/img/img03.png"
+                      src="../image/minea/img03.png"
                       alt=""
                       class="rounded-3"
                     />
