--- a/assets/pages/video1.html
+++ b/assets/pages/video1.html
@@ -11,10 +11,10 @@
     />
     <!-- link css -->
     <link rel="stylesheet" href="assets/minea/css/minea.css" />
-    <link rel="stylesheet" href="assets/css/style.css" />
-    <link rel="stylesheet" href="assets/css/theme.css" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/theme.css" />
     <!-- link bs -->
-    <link rel="stylesheet" href="assets/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="../bootstrap/dist/css/bootstrap.css" />
     <!-- link vdo -->
     <link rel="stylesheet" href="https://cdn.plyr.io/3.8.3/plyr.css" />
     <!-- link bs -->
@@ -351,7 +351,7 @@
                 <div class="user mt-2">
                   <div class="user-pf">
                     <img
-                      src="assets/minea/img/Elon_Musk_Royal_Society.webp"
+                      src="../image/minea/Elon_Musk_Royal_Society.webp"
                       alt=""
                     />
                   </div>
@@ -366,7 +366,7 @@
                 <div class="user mt-2">
                   <div class="user-pf">
                     <img
-                      src="assets/minea/img/Elon_Musk_Royal_Society.webp"
+                      src="../image/minea/Elon_Musk_Royal_Society.webp"
                       alt=""
                     />
                   </div>
@@ -387,7 +387,7 @@
                 <div class="card-body d-flex">
                   <div class="card-img">
                     <img
-                      src="assets/minea/img/v_img01.png"
+                      src="../image/minea/v_img01.png"
                       alt=""
                       class="rounded-2"
                       style="width: 200px; height: 130px"
@@ -405,7 +405,7 @@
                 <div class="card-body d-flex">
                   <div class="card-img">
                     <img
-                      src="assets/minea/img/v_img02.png"
+                      src="../image/minea/v_img02.png"
                       alt=""
                       class="rounded-2"
                       style="width: 200px; height: 130px"
@@ -423,7 +423,7 @@
                 <div class="card-body d-flex">
                   <div class="card-img">
                     <img
-                      src="assets/minea/img/v_img03.png"
+                      src="../image/minea/v_img03.png"
                       alt=""
                       class="rounded-2"
                       style="width: 200px; height: 130px"
@@ -441,7 +441,7 @@
                 <div class="card-body d-flex">
                   <div class="card-img">
                     <img
-                      src="assets/minea/img/v_img04.png"
+                      src="../image/minea/v_img04.png"
                       alt=""
                       class="rounded-2"
                       style="width: 200px; height: 130px"
